--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
 
 header, .dado {
     border: 1px solid red;
-    width: 583px;
+    width: 100%;
+    max-width: 583px;
 }
 
 body {
@@ -44,9 +45,15 @@ input {
     height: 30px;
     border-radius: 10px;
     color: #ffffff;
-    padding-left: 20px;
     font-weight: 500;
+    text-align: center;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+    input[type=number]::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
 
 input::placeholder {
     color: #000000;
