melhorias na estilização e arualização de script

--- a/style.css
+++ b/style.css
@@ -61,12 +61,12 @@ input::placeholder {
     padding-top: 20px
 }
 
-button {
+.botao-sorteio button{
     background: #3cff00;
     box-shadow: 0px 10px 20px rgba(174, 195, 70, 0.35);
     width: 100px;
     height: 30px;
-    border-radius: 10px;
+    border-radius: 20px;
     font-weight: 700;
     border: none;
     cursor: pointer;
@@ -79,4 +79,41 @@ button:hover {
 
 button:active{
     opacity: 0.8;
+}
+
+#custom-alert {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-53%, -50%);
+    background: url('assets/background-numero-sorteado.gif') center/cover no-repeat;
+    background-size: 100% 100%;
+    padding: 100px;
+    text-align: center;
+    display: none;
+    font-size: 100px;
+}
+
+#alert-content {
+    display: flex;
+    flex-direction: column;
+}
+
+#close-alert {
+    cursor: pointer;
+    background-color: #3cff00;
+    border-radius: 20px;
+    width: 30px;
+    font-weight: 700;
+    border: none;
+}
+
+#alert-message {
+    margin-top: 50px;
+    margin-left: 30px;
+    width: 200px;
+    font-size: 50px;
+    color: #ffffff;
+    font-weight: 700;
+    -webkit-text-stroke: 3px #000000;
 }
